feat: 자유게임 생성 규칙과 저장 어댑터를 추가